# pokepet

./: .editorconfig  .gitignore  .gitpod.yml  Cargo.toml  README.md  cog.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
config/: example.toml
crates/: out.txt
crates/database/: Cargo.toml
crates/database/src/: client.rs
crates/instance/: Cargo.toml
crates/instance/src/: main.rs
crates/pokepet_db/: Cargo.toml
crates/pokepet_db/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/settings/: error.rs  impls.rs  mod.rs  structs.rs  tests.rs
crates/strife-macros/: Cargo.toml
crates/strife-macros/src/: lib.rs
crates/strife-model/: Cargo.toml
crates/strife-model/src/: id.rs  lib.rs  main.rs  test.json
crates/strife-model/src/gateway/: id.rs  intents.rs  mod.rs  opcode.rs
crates/strife-model/src/gateway/dispatch/: kind.rs  mod.rs
crates/strife-model/src/gateway/event/: dispatch.rs  mod.rs  serde_impl.rs
crates/strife-model/src/gateway/payload/recv/: hello.rs  invalid_session.rs  mod.rs  presence_update.rs  ready.rs  typing_start.rs
crates/strife-model/src/gateway/payload/send/: identify.rs  mod.rs  resume.rs  update_presence.rs  update_voice_state.rs
crates/strife-model/src/guild/: ban.rs  boost_level.rs  explicit_content_filter.rs  feature.rs  member.rs  message_notification_level.rs  mfa_level.rs  mod.rs  mutable_feature.rs  nsfw_level.rs  preview.rs  system_channel_flags.rs  unavailable.rs  verification_level.rs
crates/strife-model/src/guild/integration/: account.rs  application.rs  expire_behavior.rs  mod.rs
crates/strife-model/src/guild/member/: flags.rs  mod.rs
crates/strife-model/src/guild/role/: mod.rs  tags.rs
crates/strife-model/src/guild/widget/: mod.rs  settings.rs
crates/strife-model/src/internal/: deser.rs  macros.rs  macros_old.rs  mod.rs
crates/strife-model/src/misc/: color.rs  locale.rs  mod.rs  permissions.rs  timestamp.rs
crates/strife-model/src/misc/image_hash/: mod.rs  nibbles.rs  tests.rs
crates/strife-model/src/misc/timestamp/: mod.rs  serde_impl.rs
crates/strife-model/src/oauth/: mod.rs  scope.rs
crates/strife-model/src/oauth/application/: flags.rs  install_params.rs  mod.rs
crates/strife-model/src/oauth/team/: member.rs  member_state.rs  mod.rs
crates/strife-model/src/presence/: mod.rs  statuses.rs
crates/strife-model/src/presence/activity/: assets.rs  button.rs  emoji.rs  flags.rs  kind.rs  mod.rs  party.rs  secrets.rs  timestamps.rs
crates/strife-model/src/user/: discriminator.rs  flags.rs  mod.rs  premium_type.rs
crates/strife-model/src/user/connection/: mod.rs  service.rs  visibility.rs
crates/strife-model/src/voice/: mod.rs  region.rs  state.rs
dev/: gitpod.Dockerfile
mock-server/: package.json  tsconfig.json
