[workspace]
members = ["crates/*"]

[workspace.dependencies]
strife-macros = { path = "crates/strife-macros" }

bitflags = "2.1.0"
error-stack = { git = "https://github.com/memothelemo/error-stack" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
time = { version = "0.3.20", features = ["formatting", "parsing"] }

serde_test = "^1"
static_assertions = "^1.1"
