[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.0"
edition = "2021"
authors = ["memothelemo <memothelemo@protonmail.com"]
description = "Unofficial virtual pets on Discord"
license = "AGPL-3.0"
repository = "https://github.com/memothelemo/pokepet"

[workspace.dependencies]
pokepet-db = { path = "crates/database" }
pokepet-shared = { path = "crates/shared" }

clap = { version = "4.3.10", features = ["derive"] }
doku = { version = "0.21.1", features = ["chrono"] }
dotenvy = "0.15.7"
figment = { version = "0.10.10", features = ["env", "toml", "test"] }
once_cell = "1.18.0"
redis = { version = "0.23.0", features = ["tokio-rustls-comp", "cluster", "cluster-async"] }
serde = { version = "1.0.164", features = ["derive"] }
smart-default = "0.6.0"
tokio = { version = "1.29.0", features = ["sync", "time", "tracing", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["tracing"] }
typed-builder = { git = "https://github.com/memothelemo/rust-typed-builder", branch = "hide_builders" }
twilight-cache-inmemory = "0.15.2"
twilight-model = "0.15.2"
thiserror = "1.0.40"
error-stack = { git = "https://github.com/memothelemo/error-stack", version = "0.3.1" }

[workspace.dependencies.sqlx]
git = "https://github.com/memothelemo/sqlx"
features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
	"chrono",
	"uuid",
]
