[package]
name = "pokepet-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
diesel.workspace = true
dotenvy.workspace = true

# TODO: Migrate to sqlx
# fix with x86_64-linux-unknown-musl
pq-sys = { version = "*" }
openssl = "*"
