[package]
name = "pokepet_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

[dependencies.sqlx]
git = "https://github.com/memothelemo/sqlx"
features = [
	"runtime-tokio",
	# musl dev environment fails to link with openssl despite
	# openssl is supported according to the base image page
	"tls-rustls",
	"postgres"
]
