[package]
name = "pokepet-shared"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
doku.workspace = true
dotenvy.workspace = true
error-stack.workspace = true
figment.workspace = true
serde.workspace = true
smart-default.workspace = true
thiserror.workspace = true
