[package]
name = "pokepet-shared"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
doku.workspace = true
dotenvy.workspace = true
error-stack.workspace = true
figment.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
secrecy.workspace = true
serde.workspace = true
smart-default.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand = "0.8.5"
