[package]
name = "strife-model"
version = "0.1.0"
edition = "2021"

[dependencies]
strife-macros = { workspace = true }

bitflags = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_test = { workspace = true }
static_assertions = { workspace = true }
